--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #fac0c0;
 }
 
 a {
@@ -414,16 +414,16 @@ h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
-  position: relative;
+     width: 100%;
+    height: 100vh;
+    background: url(../img/mts-bg.jpeg) top center;
+    background-size: cover;
+    position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(77, 201, 112, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
