--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1004,7 +1004,7 @@ section {
 }
 
 .counts .image {
-  background: url("../img/counts-img.jpg") center center no-repeat;
+  background: url("assets/img/ppdb1.jpeg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
